# Facebook-friend-checker

./: .env.example  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.md  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/: __init__.py  cli.py  fetcher.py  logger.py  main.py  notifier.py  storage.py  tracker.py
tests/: __init__.py  test_facebook_friend_tracker.py
